sumo/tests/netconvert/import/XML/errors/broken_edge/edge#length__empty4/errors.netconvert
Error: Attribute 'speed' is missing in definition of edge '4'.
Quitting (on error).
